rename package, configurando e melhorando docs