@@ -9,9 +9,9 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
 
-  <groupId>com.github.nogueiralegacy</groupId>
+  <groupId>br.gov.go.saude.fhir</groupId>
   <artifactId>trust-store-icpbrasil</artifactId>
-  <version>1.0</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -78,6 +78,13 @@
       <version>8.5.7</version>
     </dependency>
 
+    <!-- Gerador de Metadados para Autocomplete no IDE -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-configuration-processor</artifactId>
+      <optional>true</optional>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -98,16 +105,6 @@
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>${surefire.version}</version>
-    <configuration>
-    <!-- Configuração do TrustStore para os testes -->
-        <argLine>
-            -XX:+EnableDynamicAgentLoading 
-            --add-opens java.base/java.lang=ALL-UNNAMED
-            -Djavax.net.ssl.trustStore=${project.build.testOutputDirectory}/mytruststore.jks
-            -Djavax.net.ssl.trustStorePassword=changeit
-            -Djavax.net.ssl.trustStoreType=JKS
-        </argLine>
-    </configuration>
 </plugin>
 
       <!-- Plugin de compilação com aviso de depreciação -->
@@ -119,6 +116,10 @@
             <path>
               <groupId>org.projectlombok</groupId>
               <artifactId>lombok</artifactId>
+            </path>
+            <path>
+              <groupId>org.springframework.boot</groupId>
+              <artifactId>spring-boot-configuration-processor</artifactId>
             </path>
           </annotationProcessorPaths>
         </configuration>
